# generic-fft

./: README.md  generic-fft.cabal
src/Generic/: FFT.hs
